--- a/test.html
+++ b/test.html
@@ -6,5 +6,8 @@
 <body>
 	<div></div>
 	<script src="index.js"></script>
+	<script>
+		document.body.typetext(`Hello <i><b>World</b></i><ul><li>This</li><li>is</li><li>FUN!</li></ul>`);
+	</script>
 </body>
 </html>
